@@ -1,5 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 changes relative to sbcl-1.3.20:
+  * minor incompatible change: the CLOBBER-IT restart for defstruct redefintion
+    has been removed after a 15 year deprecation cycle. Use the new name,
+    RECKLESSLY-CONTINUE. Note also that this restart is hidden if deemed unsafe
+    due to altered placement of untagged slots in the structure.
   * enhancement: backends using the generational GC are able to relocate
     dynamic space anywhere the operating system places it.
     This feature can be disabled by removing :relocatable-heap from the
